[package]
name = "teldrassil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
hyper = "0.14"
axum = { version = "0.6", features = ["headers"] }
async-graphql = { version = "5.0", features = ["uuid", "chrono"] }
async-graphql-axum = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

indradb-lib = { version = "3.0.4", features = ["rocksdb-datastore"] }

anyhow = "1.0"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2", features = ["v4"] }
assert-json-diff = "2.0.2"

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
